fixed modal scrolling
HOW DO I FIX IMAGES NOT SHOWING IN MODALS TELL ME PLEASE UGDSHJHGFDJKGHGFKJGjhgjgkfghdsgfhfgjhfghdsagfhjdsgfghfhfdshfdfdfdfdgjgjs

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -35,8 +35,8 @@
 
 .image_1 {
     margin-top: 0.5em;
-    width: auto; /* you can use % */
-    height: 20em;
+    width: 20em; /* you can use % */
+    height: auto;
 }
 /* THIS IS HERE BECAUSE CSS IS STUPID */
 
